deployments/docker-compose/k8s/deployments.yaml

apiVersion: cloud-streams.io/v1
kind: Gateway
metadata:
  name: gateway-1
spec:
  validation: #optional
    dataSchema:
      required: false
      autoGenerate: true
  sources: #optional
    - uri: https://some.domain/source
      authorization:
        rules:
          - type: attribute
            attributeName: subject
            attributeValue: '*'
  events:
    - source: '*'
      type: '*'
      metadata:
        properties:
          - name: '$correlationId'
            strategy: expression
            expression: '.subject'
          - name: '$causationId'
            strategy: expression
            expression: '.id'
