deployments/docker-compose/k8s/resources.yaml

apiVersion: cloud-streams.io/v1
kind: Gateway
metadata:
  name: gateway-1
spec:
  validation:
    dataSchema:
      required: false
      autoGenerate: true
  sources:
    - uri: https://mozart-dev.ccie.cisco.com/sys-admin
      authorization:
        rules:
          - type: attribute
            attributeName: subject
            attributeValue: '*'
